# roomkartographer

./: Cargo.toml  README.md  backup.txt  roverconfig.toml
bot/: Cargo.toml  build gnu.sh  build.sh
bot/.cargo/: config
bot/src/: main.rs
global_lib/: Cargo.toml
global_lib/src/: bus.rs  bus_old  lib.rs  rover_config.rs
global_lib/src/types/: mod.rs  scan.rs
lidar/: Cargo.toml  icp_backup.txt  index.html
lidar/src/: lib.rs
lidar/src/logic/: mod.rs  rplidarwrapper.rs
navigation/: Cargo.toml
navigation/src/: lib.rs
navigation/src/world/: chunk.rs  mod.rs  world.rs
rover_body/: Cargo.toml
rover_body/src/: lib.rs
rover_body/src/rover_body/: imu.rs  mod.rs
slam/: .gitignore  Cargo.toml  back  backup.txt
slam/src/: lib.rs  main.rs  point_simpifier.rs  ramer_douglas_peucker.rs  scanlog.rs  slam.rs
webserver/: Cargo.toml  back.txt  generate.sh
webserver/src/: lib.rs  smith_types.rs
webserver/web/: build.sh  bundle.js  coordinatesystem.ts  index.html  main.ts  schema.smith
webserver/web/pkg/: smith_js.d.ts  smith_js_bg.wasm.d.ts
webserver/web2/: package-lock.json  tsconfig.json
webserver/web2/public/pkg/: package.json  smith_js.js  smith_js_bg.wasm
webserver/web2/src/: App.svelte
webserver/web2/src/components/: KeyboardCapture.svelte
webserver/web2/src/logic/: canvas_controller.ts  smith_types.ts
world_emulator/: Cargo.toml
world_emulator/src/: lib.rs  world.rs
