[package]
name = "bot"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"

nalgebra.workspace = true
global_lib.workspace = true
tokio.workspace = true
postage.workspace = true
log.workspace = true
lidar.workspace = true
world_emulator.workspace = true
webserver.workspace = true
navigation.workspace=true
# rover_body.workspace = true
