[package]
name = "global_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode ={ workspace = true }
serde ={ workspace = true }
tokio = {workspace = true}
log = {workspace = true}
lazy_static = {workspace= true}
rplidar_drv.workspace = true
nalgebra.workspace = true
config = {version = "0.13.3",default_features = false, features= ["toml"]}
paste = "1.0.14"
kdtree = "0.7.0"
icp_2d.workspace = true