[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
lazy_static.workspace = true
log.workspace = true
global_lib.workspace = true
smith-core.path = "../../3. Semester/smith/smith-core"
tokio.workspace = true
serde.workspace = true
include_dir = "0.7.3"
iftree = "1.0.4"
mime = "0.3.17"
mime_guess = "2.0.4"
